[tool.poetry]
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
description = ""
license = "GPL-3.0"
name = "pipelines"
version = "0.1.0"

[tool.poetry.dependencies]
PyMySQL = {extras = ["rsa"], version = "^1.0.2"}
Shapely = "^1.8.1"
Unidecode = "^1.3.6"
basedosdados = "1.7.0b3"
black = "20.8b1"
croniter = "^1.3.5"
cx-Oracle = "^8.3.0"
dbt-client = "^0.1.3"
earthengine-api = "^0.1.334"
elasticsearch = "^8.2.0"
geobr = "^0.1.10"
geopandas = ">=0.7.0,<0.8.0" # This version range is due to `geobr` package
google-api-python-client = "^2.56.0"
gspread = "^5.5.0"
html5lib = "^1.1"
hvac = "0.11.2"
loguru = "^0.6.0"
lxml = "^4.9.1"
matplotlib = "3.5.1"
mlflow = {extras = ["extras"], version = "^1.28.0"}
netCDF4 = "1.5.8"
numpy = "1.22.0"
pandas = "1.5.2"
pandas-read-xml = "^0.3.1"
pendulum = "2.1.2"
phonenumbers = "^8.12.57"
prefect = "0.15.9"
pymssql = "^2.2.4"
python = ">=3.8,<3.11"
python-telegram-bot = "^13.11"
pytz = "^2021.3"
rasterio = "1.2.10"
redis-pal = "1.0.0"
requests = "^2.20"
rioxarray = "0.9.0"
s3fs = "^2022.2.0"
scp = "^0.14.4"
tweepy = "4.4"
xarray = "^2022.3.0"
geopy = "^2.3.0"
bs4 = "^0.0.1"
geojsplit = "^0.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest_cov = "^3.0.0"

#
# Keep this until group dependencies are stable on Poetry
#

# [tool.poetry.group.cli]
# optional = true

# [tool.poetry.group.cli.dependencies]
loguru = "^0.6.0"
python-string-utils = {git = "https://github.com/daveoncode/python-string-utils.git", rev = "master"}
typer = "^0.4.0"

# [tool.poetry.group.deploy]
# optional = true

# [tool.poetry.group.deploy.dependencies]
google-cloud-storage = "1.42.3"
# loguru = "^0.6.0"
# poetry = "^1.1.13"
# prefect = "0.15.9"
python-box = {version = "^5.4.1"}
# typer = "^0.4.0"

# [tool.poetry.group.dev]
# optional = true

# [tool.poetry.group.dev.dependencies]
black = "20.8b1"
flake8 = "^4.0.1"
pdoc3 = "^0.10.0"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
docs = "scripts.docs:main"
lint = "scripts.lint:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
